<resources>
    <string name="app_name">Starter App</string>
    // GENERIC
    <string name="generic.error.offline">Offline</string>
    <string name="generic.error.timeout">Timeout</string>
    <string name="generic.error.unknown">Unknown error</string>
    <string name="generic.search.hint">Search</string>
    <string name="hello_world">Hello World</string>
    <string name="login_go_to_register">Register</string>
    <string name="login_go_to_login">Login</string>
    <string name="login_login_action">Login</string>
    <string name="login_password">Password</string>
    <string name="login_email">E-mail</string>
    <string name="register_register_action">Register</string>
    <string name="register_password">Password</string>
    <string name="register_password_repeat">Repeat Password</string>
    <string name="register_email">E-mail</string>
    <string name="login_not_valid">E-mail is not valid</string>
    <string name="login_password_not_valid">Password can\'t be empty</string>
    <string name="login_error_server_side">Oops, something went wrong!</string>
    <string name="register_email_not_valid">E-mail not valid</string>
    <string name="register_password_not_valid">Password is not valid</string>
    <string name="register_passwords_are_not_same">Typed passwords are different!</string>
    <string name="register_error_server_side">Ops, something wrong happened!</string>
    <string name="main.navigation.explore">Explore</string>
    <string name="main.navigation.realtors">Realtors</string>
    <string name="main.navigation.clients">Clients</string>
    <string name="main.navigation.profile">Profile</string>
    <string name="profile_save_action">Save</string>
    <string name="profile_email">E-mail</string>
    <string name="profile_changed">Profile Saved</string>
    <string name="explore_list">List</string>
    <string name="explore_map">Map</string>
    <string name="explore_show_filters">Filters</string>
    <string name="common_general_error">Oops, something went wrong!</string>

    <string name="explore_apartment_area">Area: %s m²</string>
    <string name="explore_apartment_rooms">Rooms: %s</string>
    <string name="explore_apartment_price">$%s/mo</string>
    <string name="explore_apartment_available">Available</string>
    <string name="explore_apartment_rented">Rented</string>
    <string name="filter_size">Size (%s - %s)m²</string>
    <string name="filter_price">Price $(%s - %s)/monthly</string>
    <string name="filter_rooms">Rooms (%s - %s)</string>

    <string name="filter_show_rented">Show rented</string>
    <string name="filter_show_available">Show available</string>
    <string name="filter_apply">Apply filters</string>
    <string name="explore_add">Add</string>
    <string name="form_apartment_name">Apartment name</string>
    <string name="form_apartment_description">Description</string>
    <string name="form_apartment_rooms">Rooms</string>
    <string name="form_apartment_area">Area (m²)</string>
    <string name="form_apartment_lat">GPS location latitude</string>
    <string name="form_apartment_lng">GPS location longitude</string>
    <string name="form_change_location">Change location</string>
    <string name="form_apartment_price">Price ($/monthly)</string>
    <string name="form_change_realtor">Select Realtor</string>
    <string name="form_save">Save</string>
    <string name="form_apartment_realtor">Realtor</string>
    <string name="form_field_required">Field required</string>
    <string name="form_confirm_delete_title">Confirm action</string>
    <string name="form_confirm_delete_message">Do you want to remove this apartment?</string>
    <string name="form_confirm_delete_user_message">Do you want to remove this user?</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="filter_no_results">No apartments found!</string>
    <string name="main.navigation.users">Users</string>
    <string name="add_user">Add user</string>
    <string name="filter_no_users_found">No users found</string>
    <string name="profile_logout">Logout</string>

</resources>
