<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="pl.starter.android.feature.auth.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/single_spacer">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/register_image"
            app:layout_constraintBottom_toBottomOf="@id/registerEmailTL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            style="@style/TextSmall.Black.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_spacer"
            android:layout_marginEnd="@dimen/double_spacer"
            android:onClick="@{() -> viewModel.onLoginRequested()}"
            android:text="@string/login_go_to_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerEmailTL"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/double_spacer"
            android:error="@{viewModel.emailError}"
            app:layout_constraintBottom_toTopOf="@+id/registerPasswordTL">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_email"
                android:text="@={viewModel.email}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerPasswordTL"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/double_spacer"
            android:error="@{viewModel.passwordError}"
            app:layout_constraintBottom_toTopOf="@+id/registerRepeatPasswordTL">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerRepeatPasswordTL"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/double_spacer"
            app:layout_constraintBottom_toTopOf="@+id/registerButton">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password_repeat"
                android:inputType="textPassword"
                android:text="@={viewModel.repeatPassword}" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/registerButton"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="@{!viewModel.inProgress}"
            android:onClick="@{()-> viewModel.onRegister()}"
            android:text="@string/register_register_action"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ProgressBar
            android:layout_width="@dimen/auth_progress_size"
            android:layout_height="@dimen/auth_progress_size"
            android:layout_marginStart="@dimen/half_spacer"
            android:layout_marginTop="@dimen/half_spacer"
            android:layout_marginBottom="@dimen/half_spacer"
            android:elevation="@dimen/double_spacer"
            app:layout_constraintBottom_toBottomOf="@+id/registerButton"
            app:layout_constraintStart_toStartOf="@+id/registerButton"
            app:layout_constraintTop_toTopOf="@+id/registerButton"
            app:visible="@{viewModel.inProgress}" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
